2008-01-31  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/iwarp.c: choose a better tile cache size.

2008-01-31  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimppolygonselecttool.[ch]: Code formating overhaul.

2008-01-31  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimppolygonselecttool.[ch]: Made object instance
	struct definition completely a private implementation detail.

2008-01-31  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimppolygonselecttool.c
	(gimp_polygon_select_tool_real_select): Correct undo description.

2008-01-30  Martin Nordholts  <martinn@svn.gnome.org>

	Added a Polygon Select Tool which is a primitive selection tool
	based on Free Select Tool. Code filtered through David Gowers who
	also made the tool icon. This version of the tool is a for-now
	solution to bug #119646.

	* app/tools/gimppolygonselecttool.[ch]: The new tool.

	* app/tools/gimp-tools.c: Add the tool.

	* app/tools/Makefile.am: Add tool source.

	* app/widgets/gimphelp-ids.h: Add help id for the tool.

	* libgimpwidgets/gimpstock.[ch]: Setup for the new tool icon.

	* menus/image-menu.xml.in: Add action entry for the tool.

	* themes/Default/images/tools/stock-tool-polygon-select-{16,22}.png:
	Tool icon graphics.

	* themes/Default/images/Makefile.am: Add tool icon graphics.

2008-01-30  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpimagemaptool.[ch]: add "GObject **config" return
	value to GimpImageMapTool::get_operation() and memory-manage the
	config object here.

	Add default implementation of GimpImageMapTool::reset() which
	calls gimp_config_reset() on the config object.

	* app/tools/gimpbrightnesscontrasttool.c
	* app/tools/gimpcolorbalancetool.c
	* app/tools/gimpcolorizetool.c
	* app/tools/gimpcurvestool.c
	* app/tools/gimphuesaturationtool.c
	* app/tools/gimplevelstool.c
	* app/tools/gimpposterizetool.c
	* app/tools/gimpthresholdtool.c: return the config object in
	get_operation() and don't unref it in finalize().
