@@ -32,8 +32,6 @@
 
 #include <glib-object.h>
 
-#include <gegl.h>
-
 #include "libgimpbase/gimpbase.h"
 #include "libgimpconfig/gimpconfig.h"
 
@@ -81,8 +79,6 @@ app_libs_init (GOptionContext *context,
                gboolean        no_interface)
 {
   g_type_init ();
-
-  g_option_context_add_group (context, gegl_get_option_group ());
 
 #ifndef GIMP_CONSOLE_COMPILATION
   if (! no_interface)
