@@ -1,5 +1,11 @@
 2008-01-31  Sven Neumann  <sven@gimp.org>
 
+	* app/app.c (app_libs_init): don't add the GEGL options group
+	here.  GEGL doesn't add any command-line options and it doesn't
+	look as if it would do that anytime soon.
+
+2008-01-31  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/iwarp.c: choose a better tile cache size.
 
 2008-01-31  Martin Nordholts  <martinn@svn.gnome.org>
